Use telepathic, structure and biome GUIs
- Use the telepathic structure GUI from modelled console in the `/ttravel structure` command with no further arguments
- Use the telepathic biome GUI from modelled console in the `/ttravel biome` command with no further arguments
- Add Floodgate structures form
- Add Floodgate biomes form
- Add Floodgate telepathic form
- Open the Telepathic GUI when clicking the telepathic circuit
- Toggle telepathic circuit when sneak clicking